# 2024-kmers-can-call-variants

./: 1_index.cpp  1_ref_to_bin.cpp  2_fastq_partitioner.cpp  CMakeLists.txt  commonKmers.cpp  fastq_extract_by_kmers.cpp  fastq_partitioner.cpp  python_version.py  reads_stats.cpp  todo_2_inverted_index.cpp
include/: helper_functions.hpp
src/: helper_functions.cpp
test/: test_scoring.cpp
